<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.padmal.accountsystemv10.NewCategoryEntry">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Create"
        android:id="@+id/newcategorybuttonupdate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#fff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonclear"
        android:id="@+id/newcategorybuttonclear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:onClick="clearButtonClicked"
        android:textColor="#fff" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/frameLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labeltype"
            android:id="@+id/textView"
            android:layout_marginTop="15dp"
            android:layout_gravity="start|top"
            android:textStyle="bold"
            android:textColor="#fff" />

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="Type"
            android:id="@+id/newcategorytype"
            android:layout_gravity="end|center_vertical"
            android:textOn="Income"
            android:textOff="Expense"
            android:textSize="18sp"
            android:checked="false" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/frameLayout2"
        android:layout_alignLeft="@+id/frameLayout2"
        android:layout_alignStart="@+id/frameLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labeldescription"
            android:id="@+id/textView3"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapWords"
            android:ems="10"
            android:id="@+id/newcategorytextdescription"
            android:layout_marginTop="0dp"
            android:layout_gravity="start|center_vertical"
            android:textStyle="italic" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignLeft="@+id/frameLayout"
        android:layout_alignStart="@+id/frameLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout2">

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"
            android:ems="10"
            android:id="@+id/newcategorytextcategory"
            android:layout_gravity="end|center_vertical"
            android:lines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelcategory"
            android:id="@+id/textView2"
            android:layout_marginTop="15dp"
            android:layout_gravity="start|top"
            android:textStyle="bold"
            android:textColor="#fff" />
    </FrameLayout>

</RelativeLayout>
